feat: 增加仓库初始化，新增文件，查询文件接口
