# server/api/user.go
@@ -13,13 +13,14 @@ import (
 	"github.com/go-resty/resty/v2"
 )
 
+// @Tags 用户
 // @Summary 授权登录
 // @Description gitee auth login
 // @Param	repo	query	string	true	"仓库类型 gitee or github"
 // @Param	code	query	string	true	"{redirect_uri}?code=abc"
 // @Success 200 {string} string "{"success":true,"data":{},"msg":"创建成功"}"
-// @Router /auth/:repo [get]
-func AuthAction(c *gin.Context) {
+// @Router /user/auth/:repo [get]
+func UserAuthAction(c *gin.Context) {
 	code := c.Query("code")
 	repo := c.Param("repo")
 	// state := c.Query("state")
@@ -32,12 +33,13 @@ func AuthAction(c *gin.Context) {
 	}
 }
 
+// @Tags 用户
 // @Summary 获取用户信息
 // @Description 获取用户的基本信息
 // @Param	token	query	string	true	"accesstoken"
 // @Success 200 {string} string "{"success":true,"data":{},"msg":"创建成功"}"
-// @Router /user [get]
-func UserAction(c *gin.Context) {
+// @Router /user/info [get]
+func UserInfoAction(c *gin.Context) {
 	token := c.Query("token")
 	if token == "" {
 		response.FailWithMessage("接口未授权", c)
